k8s/media/jackett/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: jackett
  template:
    metadata:
      labels:
        component: jackett
    spec:
      containers:
        - name: jackett
          image: docker.io/linuxserver/jackett:development
          imagePullPolicy: Always
          ports:
            - name: jackett
              containerPort: 9117
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: media-data
              mountPath: /config
              subPath: config/jackett
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
        - name: init-files-jackett
          configMap:
            defaultMode: 493
            name: init-jackett-cm
