k8s/media/jackett/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  type: ClusterIP
  selector:
    component: jackett
  ports:
    - name: jackett
      port: 9117
      targetPort: jackett
