k8s/media/jackett/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: media-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: jackett.media.k8s.prrlvr.fr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jackett
              port:
                name: jackett
  tls:
    - hosts:
        - jackett.media.k8s.prrlvr.fr
      secretName: jackett-media-tls
